// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not ignore node_modules for manual file list  1`] = `
{
  "stderr": "",
  "stdout": "nested/node_modules/node-module.js
node_modules/node-module.js
not_node_modules/file.js
regular-module.js",
  "write": [],
}
`;

exports[`doesn't ignore node_modules with --with-node-modules flag  1`] = `
{
  "stderr": "",
  "stdout": "nested/node_modules/node-module.js
node_modules/node-module.js
not_node_modules/file.js
regular-module.js",
  "write": [],
}
`;

exports[`ignores node_modules by default  1`] = `
{
  "stderr": "",
  "stdout": "not_node_modules/file.js
regular-module.js",
  "write": [],
}
`;

exports[`ignores node_modules by with ./**/*.js  1`] = `
{
  "stderr": "",
  "stdout": "not_node_modules/file.js
regular-module.js",
  "write": [],
}
`;
